# renec

./: .gitignore  README.md  RELEASE.md  fetch-spl.sh  package-lock.json
.circleci/: config.yml
bench-tps/: Cargo.toml
bench-tps/src/: cli.rs  keypairs.rs  main.rs
ci/: localnet-sanity.sh  publish-tarball.sh  run-sanity.sh  test-bench.sh  test-stable.sh
clap-utils/src/: input_validators.rs  keypair.rs
cli/: Cargo.toml
cli-config/: Cargo.toml
cli-config/src/: config.rs  lib.rs
cli-output/: Cargo.toml
cli-output/src/: cli_output.rs  display.rs
cli/src/: address_lookup_table.rs  clap_app.rs  cli.rs  cluster_query.rs  feature.rs  inflation.rs  main.rs  nonce.rs  program.rs  stake.rs  validator_info.rs  vote.rs  wallet.rs
cli/tests/: address_lookup_table.rs  nonce.rs  program.rs  request_airdrop.rs  stake.rs  transfer.rs  vote.rs
client/: Cargo.toml
client/src/: lib.rs  mock_sender.rs  rpc_response.rs
core/src/: banking_stage.rs
docs/: .gitignore  build-cli-usage.sh  docusaurus.config.js  package-lock.json  package.json  set-solana-release-tag.sh  sidebars.js
docs/src/: cli.md  clusters.md  economics_overview.md  history.md  introduction.md  offline-signing.md  re-usd.md  renec-wallet.md  rpl-token.md  running-validator.md  staking.md  storage_rent_economics.md  terminology.md  transaction_fees.md  wallet-guide.md
docs/src/cli/: .usage.md.header  choose-a-cluster.md  conventions.md  delegate-stake.md  deploy-a-program.md  install-renec-cli-tools.md  install-solana-cli-tools.md  transfer-tokens.md  usage.md
docs/src/cluster/: bench-tps.md  leader-rotation.md  overview.md  performance-metrics.md  rpc-endpoints.md  stake-delegation-and-rewards.md  synchronization.md  turbine-block-propagation.md  vote-signing.md
docs/src/css/: custom.css
docs/src/developing/: backwards-compatibility.md  test-validator.md
docs/src/implemented-proposals/: abi-management.md  durable-tx-nonces.md  implemented-proposals.md  installer.md  rent.md  staking-rewards.md  testing-programs.md  tower-bft.md  validator-timestamp-oracle.md
docs/src/inflation/: adjusted_staking_yield.md  inflation_schedule.md  terminology.md
docs/src/integrations/: exchange.md
docs/src/offline-signing/: durable-nonce.md
docs/src/pages/: index.js
docs/src/proposals/: accepted-design-proposals.md  embedding-move.md  interchain-transaction-verification.md  ledger-replication-to-implement.md  optimistic-confirmation-and-slashing.md  program-instruction-macro.md  return-data.md  rip-curl.md  simple-payment-and-state-verification.md  transactions-v2.md  validator-proposal.md  vote-signing-to-implement.md
docs/src/renec-wallet/: create-wallet.md  usage.md
docs/src/rpl-token/: associated-token-account.md  token-program.md
docs/src/running-validator/: restart-cluster.md  validator-auto-deployment.md  validator-info.md  validator-monitor.md  validator-reqs.md  validator-stake.md  validator-start.md  validator-troubleshoot.md  vote-accounts.md
docs/src/staking/: stake-accounts.md  stake-programming.md
docs/src/validator/: blockstore.md  runtime.md
docs/src/wallet-guide/: apps.md  cli.md  file-system-wallet.md  hardware-wallets.md  solflare.md  (+4 more)
explorer/: .gitignore  README.md  package-lock.json  package.json
explorer/public/: index.html  manifest.json
explorer/src/: App.tsx
faucet/: Cargo.toml
faucet/src/: faucet.rs
genesis/: Cargo.toml
genesis-utils/: Cargo.toml
genesis/src/: genesis_accounts.rs  main.rs  stakes.rs
gossip/: Cargo.toml
install/: Cargo.toml  install-help.sh  renec-install-init.sh
install/src/: command.rs  defaults.rs  lib.rs  main.rs
keygen/: Cargo.toml
keygen/src/: keygen.rs
ledger-tool/: Cargo.toml
ledger-tool/src/: bigtable.rs  main.rs
ledger/src/: blockstore.rs  blockstore_db.rs  blockstore_meta.rs
logger/: Cargo.toml
metrics/: Cargo.toml
multinode-demo/: bootstrap-validator.sh  common.sh  delegate-stake.sh  setup-from-mainnet-beta.sh  setup-from-testnet.sh  setup.sh  validator.sh
net/: net.sh
net-utils/: Cargo.toml
net/remote/: remote-deploy-update.sh  remote-node.sh  remote-sanity.sh
perf/src/: lib.rs
poh/: Cargo.toml
poh/src/: poh_service.rs
program-test/src/: lib.rs
programs/bpf/: Cargo.toml
rbpf-cli/: Cargo.toml
rbpf-cli/src/: main.rs
remote-wallet/: Cargo.toml
renec-wallet/: .gitignore  README.md  cypress.config.js  package-lock.json  package.json
renec-wallet/public/: index.html  manifest.json
renec-wallet/src/: App.js  i18n.js  index.scss
replica-node/: Cargo.toml
replica-node/src/: main.rs  replica_node.rs
rpc/src/: rpc.rs
runtime/src/: bank.rs  inline_spl_associated_token_account.rs  inline_spl_token.rs  static_ids.rs
scripts/: cargo-install-all.sh  renec-install-deploy.sh  renec-install-update-manifest-keypair.sh  run.sh  wallet-sanity.sh
sdk/src/: feature_set.rs  genesis_config.rs  inflation.rs  packet.rs
src/: App.tsx  i18n.ts
src/components/: ClusterModal.tsx
src/locales/: en.json
src/pages/: AccountDetailsPage.tsx  BlockDetailsPage.tsx
src/scss/: _solana-dark-overrides.scss  _solana-variables-dark.scss  _solana-variables.scss  theme.scss
stake-accounts/: Cargo.toml
stake-accounts/src/: arg_parser.rs  main.rs
stake-monitor/: Cargo.toml
streamer/: Cargo.toml
sys-tuner/: Cargo.toml
sys-tuner/src/: lib.rs  main.rs
system-test/abi-testcases/: mixed-validator-test.sh
system-test/genesis-test/: cluster_token_count.sh  get_owned_accounts_info.sh
system-test/stability-testcases/: gossip-dos-test.sh
system-test/stake-operations-testcases/: offline_stake_operations.sh
test-validator/: Cargo.toml
test-validator/src/: lib.rs
tokens/: Cargo.toml
tokens/src/: arg_parser.rs  main.rs
transaction-dos/: Cargo.toml
transaction-dos/src/: main.rs
validator/: Cargo.toml
validator/src/: bootstrap.rs  main.rs
watchtower/: Cargo.toml
watchtower/src/: main.rs
web3.js/: .releaserc.json  .travis.yml  README.md  package-lock.json  package.json
web3.js/src/: index.ts  transaction.ts
web3.js/test/: cluster.test.ts  connection.test.ts  validator-info.test.ts
(+211 files in other folders)
