[package]
authors = ["RENEC Maintainers <dev@remitano.com>"]
edition = "2021"
name = "renec-cli-output"
description = "Blockchain, Rebuilt for Scale"
version = "1.10.41"
repository = "https://github.com/remitano/renec"
license = "Apache-2.0"
homepage = "https://remitano.com/"
documentation = "https://docs.rs/renec-cli-output"

[dependencies]
Inflector = "0.11.4"
base64 = "0.13.0"
chrono = { version = "0.4.11", features = ["serde"] }
clap = "2.33.0"
console = "0.15.0"
humantime = "2.0.1"
indicatif = "0.16.2"
semver = "1.0.6"
serde = "1.0.136"
serde_json = "1.0.79"
solana-account-decoder = { path = "../account-decoder", version = "=1.10.41" }
solana-clap-utils = { path = "../clap-utils", version = "=1.10.41" }
solana-client = { path = "../client", version = "=1.10.41" }
renec-cli-config = { path = "../cli-config", version = "=1.10.41" }
solana-sdk = { path = "../sdk", version = "=1.10.41" }
solana-transaction-status = { path = "../transaction-status", version = "=1.10.41" }
solana-vote-program = { path = "../programs/vote", version = "=1.10.41" }
spl-memo = { version = "=3.0.1", features = ["no-entrypoint"] }

[dev-dependencies]
ed25519-dalek = "=1.0.1"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
