[package]
name = "renec-genesis-utils"
version = "1.9.29"
description = "RENEC Genesis Utils"
authors = ["RENEC Maintainers <dev@remitano.com>"]
repository = "https://github.com/remitano/renec"
license = "Apache-2.0"
homepage = "https://remitano.com/"
documentation = "https://docs.rs/renec-genesis-utils"
edition = "2021"

[dependencies]
solana-sdk = { path = "../sdk", version = "=1.9.29" }
solana-download-utils = { path = "../download-utils", version = "=1.9.29" }
solana-runtime = { path = "../runtime", version = "=1.9.29" }

[lib]
crate-type = ["lib"]
name = "renec_genesis_utils"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
