[package]
authors = ["RENEC Maintainers <dev@remitano.com>"]
edition = "2021"
name = "renec-genesis"
description = "Blockchain, Rebuilt for Scale"
version = "1.10.41"
repository = "https://github.com/remitano/renec"
license = "Apache-2.0"
homepage = "https://remitano.com/"
documentation = "https://docs.rs/renec-genesis"

[dependencies]
base64 = "0.13.0"
clap = "2.33.1"
serde = "1.0.136"
serde_json = "1.0.79"
serde_yaml = "0.8.23"
solana-clap-utils = { path = "../clap-utils", version = "=1.10.41" }
renec-cli-config = { path = "../cli-config", version = "=1.10.41" }
solana-entry = { path = "../entry", version = "=1.10.41" }
solana-ledger = { path = "../ledger", version = "=1.10.41" }
solana-logger = { path = "../logger", version = "=1.10.41" }
solana-runtime = { path = "../runtime", version = "=1.10.41" }
solana-sdk = { path = "../sdk", version = "=1.10.41" }
solana-stake-program = { path = "../programs/stake", version = "=1.10.41" }
solana-version = { path = "../version", version = "=1.10.41" }
solana-vote-program = { path = "../programs/vote", version = "=1.10.41" }
tempfile = "3.3.0"

[[bin]]
name = "renec-genesis"
path = "src/main.rs"

[lib]
name = "renec_genesis"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
