[package]
name = "renec-keygen"
version = "1.9.29"
description = "RENEC key generation utility"
authors = ["RENEC Maintainers <dev@remitano.com>"]
repository = "https://github.com/remitano/renec"
license = "Apache-2.0"
homepage = "https://remitano.com/"
documentation = "https://docs.rs/renec-keygen"
edition = "2021"

[dependencies]
bs58 = "0.4.0"
clap = "2.33"
dirs-next = "2.0.0"
num_cpus = "1.13.1"
solana-clap-utils = { path = "../clap-utils", version = "=1.9.29" }
renec-cli-config = { path = "../cli-config", version = "=1.9.29" }
solana-remote-wallet = { path = "../remote-wallet", version = "=1.9.29" }
solana-sdk = { path = "../sdk", version = "=1.9.29" }
solana-version = { path = "../version", version = "=1.9.29" }
tiny-bip39 = "0.8.2"

[[bin]]
name = "renec-keygen"
path = "src/keygen.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
