[package]
authors = ["RENEC Maintainers <dev@remitano.com>"]
edition = "2021"
name = "renec-sys-tuner"
description = "The RENEC cluster system tuner daemon"
version = "1.14.17"
repository = "https://github.com/remitano/renec"
license = "Apache-2.0"
homepage = "https://remitano.com/"
documentation = "https://docs.rs/renec-sys-tuner"
publish = true

[dependencies]
clap = "2.33.1"
libc = "0.2.126"
log = "0.4.17"
solana-logger = { path = "../logger", version = "=1.14.17" }
solana-version = { path = "../version", version = "=1.14.17" }

[target."cfg(unix)".dependencies]
unix_socket2 = "0.5.4"
users = "0.10.0"
nix = "0.24.2"
sysctl = "0.4.4"

[lib]
name = "renec_sys_tuner"

[[bin]]
name = "renec-sys-tuner"
path = "src/main.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
